generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider  = "postgresql"
  url       = env("DATABASE_URL")
  directUrl = env("DIRECT_URL")
}

// ============================================================================
// USER & AUTH
// ============================================================================

enum Role {
  USER
  ADMIN
}

model User {
  id            String    @id @default(cuid())
  name          String?
  email         String    @unique
  emailVerified DateTime?
  password      String?
  image         String?
  phone         String?
  role          Role      @default(USER)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  accounts      Account[]
  sessions      Session[]
  addresses     Address[]
  orders        Order[]
  reviews       Review[]
  cartItems     CartItem[]
  wishlistItems WishlistItem[]

  @@index([email])
}

model Account {
  id                String  @id @default(cuid())
  userId            String
  type              String
  provider          String
  providerAccountId String
  refresh_token     String? @db.Text
  access_token      String? @db.Text
  expires_at        Int?
  token_type        String?
  scope             String?
  id_token          String? @db.Text
  session_state     String?

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([provider, providerAccountId])
}

model Session {
  id           String   @id @default(cuid())
  sessionToken String   @unique
  userId       String
  expires      DateTime
  user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model VerificationToken {
  identifier String
  token      String   @unique
  expires    DateTime

  @@unique([identifier, token])
}

model Address {
  id         String  @id @default(cuid())
  userId     String
  fullName   String
  phone      String
  province   String
  district   String
  ward       String
  street     String
  isDefault  Boolean @default(false)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  user   User    @relation(fields: [userId], references: [id], onDelete: Cascade)
  orders Order[]

  @@index([userId])
}

// ============================================================================
// CATALOG
// ============================================================================

enum Gender {
  MALE
  FEMALE
  UNISEX
}

enum Concentration {
  PARFUM
  EDP
  EDT
  EDC
}

model Brand {
  id          String  @id @default(cuid())
  name        String  @unique
  slug        String  @unique
  logo        String?
  description String? @db.Text

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  products Product[]
}

model Category {
  id          String  @id @default(cuid())
  name        String  @unique
  slug        String  @unique
  description String?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  products Product[]
}

model Product {
  id             String        @id @default(cuid())
  name           String
  slug           String        @unique
  description    String        @db.Text
  gender         Gender        @default(UNISEX)
  concentration  Concentration @default(EDP)
  topNotes       String?       @db.Text
  middleNotes    String?       @db.Text
  baseNotes      String?       @db.Text
  isFeatured     Boolean       @default(false)
  isActive       Boolean       @default(true)

  // Denormalized từ variants — để filter/sort/list nhanh.
  // Phải đồng bộ lại mỗi khi tạo/sửa/xóa variant qua syncProductPriceCache().
  minPrice    Decimal @default(0) @db.Decimal(12, 2) // min(variants.price)
  hasDiscount Boolean @default(false)                // any variant.compareAtPrice IS NOT NULL

  brandId    String
  categoryId String

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  brand      Brand            @relation(fields: [brandId], references: [id])
  category   Category         @relation(fields: [categoryId], references: [id])
  images     ProductImage[]
  variants   ProductVariant[]
  reviews    Review[]
  orderItems OrderItem[]
  wishlists  WishlistItem[]

  @@index([brandId])
  @@index([categoryId])
  @@index([isActive, isFeatured])
  @@index([slug])
  @@index([minPrice])
}

// Mỗi sản phẩm có nhiều biến thể (dung tích khác nhau, giá/tồn kho riêng).
// Cart/Order tham chiếu vào ProductVariant thay vì Product.
model ProductVariant {
  id             String   @id @default(cuid())
  productId      String
  volumeMl       Int
  price          Decimal  @db.Decimal(12, 2)
  compareAtPrice Decimal? @db.Decimal(12, 2)
  stock          Int      @default(0)
  sku            String?  @unique
  isDefault      Boolean  @default(false)
  position       Int      @default(0)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  product    Product     @relation(fields: [productId], references: [id], onDelete: Cascade)
  cartItems  CartItem[]
  orderItems OrderItem[]

  @@unique([productId, volumeMl])
  @@index([productId])
}

model ProductImage {
  id        String  @id @default(cuid())
  productId String
  url       String
  alt       String?
  position  Int     @default(0)

  product Product @relation(fields: [productId], references: [id], onDelete: Cascade)

  @@index([productId])
}

// ============================================================================
// CART & WISHLIST
// ============================================================================

model CartItem {
  id        String @id @default(cuid())
  userId    String
  variantId String
  quantity  Int    @default(1)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  user    User           @relation(fields: [userId], references: [id], onDelete: Cascade)
  variant ProductVariant @relation(fields: [variantId], references: [id], onDelete: Cascade)

  @@unique([userId, variantId])
  @@index([userId])
}

model WishlistItem {
  id        String @id @default(cuid())
  userId    String
  productId String

  createdAt DateTime @default(now())

  user    User    @relation(fields: [userId], references: [id], onDelete: Cascade)
  product Product @relation(fields: [productId], references: [id], onDelete: Cascade)

  @@unique([userId, productId])
  @@index([userId])
}

// ============================================================================
// ORDERS
// ============================================================================

enum OrderStatus {
  PENDING
  CONFIRMED
  PROCESSING
  SHIPPING
  DELIVERED
  CANCELLED
  REFUNDED
}

enum PaymentStatus {
  PENDING
  PAID
  FAILED
  REFUNDED
}

enum PaymentMethod {
  COD
  VNPAY
  MOMO
  BANK_TRANSFER
}

model Order {
  id          String @id @default(cuid())
  orderNumber String @unique
  userId      String
  addressId   String

  subtotal    Decimal @db.Decimal(12, 2)
  shippingFee Decimal @default(0) @db.Decimal(12, 2)
  discount    Decimal @default(0) @db.Decimal(12, 2)
  total       Decimal @db.Decimal(12, 2)

  status        OrderStatus   @default(PENDING)
  paymentStatus PaymentStatus @default(PENDING)
  paymentMethod PaymentMethod

  note       String?
  couponCode String?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  user    User        @relation(fields: [userId], references: [id])
  address Address     @relation(fields: [addressId], references: [id])
  items   OrderItem[]
  payment Payment?

  @@index([userId])
  @@index([status])
  @@index([orderNumber])
}

model OrderItem {
  id        String  @id @default(cuid())
  orderId   String
  productId String
  variantId String?

  // Snapshot tại thời điểm đặt hàng — giữ nguyên kể cả khi variant/product bị sửa hoặc xóa
  productName String
  volumeMl    Int
  price       Decimal @db.Decimal(12, 2)
  quantity    Int

  order   Order           @relation(fields: [orderId], references: [id], onDelete: Cascade)
  product Product         @relation(fields: [productId], references: [id])
  variant ProductVariant? @relation(fields: [variantId], references: [id], onDelete: SetNull)

  @@index([orderId])
}

model Payment {
  id            String        @id @default(cuid())
  orderId       String        @unique
  method        PaymentMethod
  status        PaymentStatus @default(PENDING)
  amount        Decimal       @db.Decimal(12, 2)
  transactionId String?
  rawResponse   Json?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  order Order @relation(fields: [orderId], references: [id], onDelete: Cascade)
}

// ============================================================================
// REVIEW
// ============================================================================

model Review {
  id        String  @id @default(cuid())
  userId    String
  productId String
  rating    Int
  comment   String? @db.Text

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  user    User    @relation(fields: [userId], references: [id], onDelete: Cascade)
  product Product @relation(fields: [productId], references: [id], onDelete: Cascade)

  @@unique([userId, productId])
  @@index([productId])
}

// ============================================================================
// MARKETING
// ============================================================================

model Banner {
  id          String  @id @default(cuid())
  title       String
  subtitle    String?
  description String? @db.Text
  imageUrl    String
  ctaLabel    String?
  ctaHref     String?
  position    Int     @default(0)
  isActive    Boolean @default(true)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([isActive, position])
}

enum DiscountType {
  PERCENTAGE
  FIXED
}

model Coupon {
  id            String       @id @default(cuid())
  code          String       @unique
  description   String?
  discountType  DiscountType
  discountValue Decimal      @db.Decimal(12, 2)
  minOrderValue Decimal?     @db.Decimal(12, 2)
  maxDiscount   Decimal?     @db.Decimal(12, 2)
  usageLimit    Int?
  usedCount     Int          @default(0)
  startsAt      DateTime
  expiresAt     DateTime
  isActive      Boolean      @default(true)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([code])
}
